[metadata]
name = plasmapy
provides = plasmapy
author = PlasmaPy Community
description = Python package for plasma physics
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD+Patent
license_file = LICENSE.md
url = https://www.plasmapy.org
edit_on_github = True
github_project = PlasmaPy/PlasmaPy
keywords=plasma physics, plasma, science, atomic
classifiers=
  Development Status :: 3 - Alpha
  Intended Audience :: Science/Research
  License :: OSI Approved :: BSD License
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: Implementation :: CPython
  Topic :: Scientific/Engineering :: Physics
  Topic :: Scientific/Engineering :: Astronomy

[options]
python_requires = >=3.7
packages = find:
include_package_data = True
setup_requires = setuptools_scm
install_requires =
  astropy >= 4.0
  cached-property >= 1.5.2
  numpy >= 1.18.1
  pandas >= 1.0.0
  scipy >= 1.2
  setuptools >= 41.2
  tqdm >= 4.56.0
  plasmaboundaries
  scikit-image
  xarray >= 0.14.0

[options.extras_require]
classes =
  h5py
  matplotlib
diagnostics =
  matplotlib
tests =
  pytest >= 5.1
  hypothesis
  pytest-regressions
  pytest-mpl
theory =
  mpmath
  lmfit
docs =
  docutils < 0.17
  numpydoc
  pillow
  pygments >= 2.4.1
  sphinx >= 2.4.4
  sphinx-automodapi >= 0.13
  sphinx-gallery
  sphinx_rtd_theme
  towncrier
  ipykernel
  nbsphinx
  sphinx-copybutton
  ipywidgets
  sphinx-changelog
  towncrier >= 19.2.0

[options.package_data]
plasmapy.particles.data = *
plasmapy.tests = coveragerc

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[tool:pytest]
minversion = 5.1
testpaths = "plasmapy" "docs"
norecursedirs = "build" "docs/_build" "examples" "auto_examples"
doctest_optionflags =
    NORMALIZE_WHITESPACE
    ELLIPSIS
    NUMBER
addopts = --mpl --mpl-baseline-relative --doctest-modules --doctest-continue-on-failure --ignore=docs/conf.py
filterwarnings =
    ignore:.*Creating a LegacyVersion.*:DeprecationWarning
looponfailroots =
    plasmapy



[flake8]
convention = numpy
# Checks marked as TODO should be eventually enabled,
# but are failing right now. These are *great*
# first contributions. ;)
# Checks not marked by TODO *maybe* should be
# eventually enabled ― ask!
extend-ignore =
    # TODO D100: Missing docstring in public module
    D100,
    # TODO D102: Missing docstring in public method
    D102,
    # TODO D103: Missing docstring in public function
    D103,
    # TODO D104: Missing docstring in public package
    D104,
    D105,
    D107,
    # TODO D200: One-line docstring should fit on one line with quotes
    D200,
    # Ignoring D202 allows blank lines to be put on either side of code "paragraphs" at the beginning of a function.
    D202,
    # D205 and D400 are ignored to allow the "one-liner" to exceed one
    # line, which is sometimes necessary for even concise descriptions of plasma
    # physics functions and classes.
    D205,
    # TODO D210: No whitespaces allowed surrounding docstring text
    D210,
    # TODO D301: Use r""" if any backslashes in a docstring
    D301,
    # D302 is unnecessary as we are using Python 3.6+.
    D302,
    # D205 and D400 are ignored to allow the "one-liner" to exceed one
    # line, which is sometimes necessary for even concise descriptions of plasma
    # physics functions and classes.
    D400,
    # TODO D401: First line should be in imperative mood
    D401,
    # D403: First word of the first line should be properly capitalized ('Latex', not 'LaTeX') # Dominik: good job, pydocstyle /s
    D403,
    # TODO D407: Missing dashed underline after section ('References')
    D407,
    # TODO D409: Section underline should match the length of its name (Expected 5 dashes in section 'Notes', got 10)
    D409,
    # TODO D412: No blank lines allowed between a section header and its content
    D412
    # E203 something something whitespace? TODO check again
    E203,
    E501,
    # TODO E712 comparison to False should be if cond is False or if not cond
    E712,
    # TODO E713 test for membership should be 'not in'
    E713,
    # E731 do not assign a lambda, use a def - Dominik: disagreed, lambdas have uses
    E731,
    F401,
    # TODO star imports and undefined variables
    F403,
    F405,
    # all TODO from here on out, probably
    F541,
    # W605 invalid escape sequence,
    W605,
    RST210,
    RST213,
    RST306,
    RST902,
exclude =
    extern,
    sphinx,
    *test*,
    *parsetab.py,
    conftest.py,
    docs/conf.py,
    setup.py,
    .jupyter
rst-roles =
    # TODO look into these
    attr,
    class,
    func,
    data,
    exc,
    file,
    meth,
    mod
rst-directives =
    deprecated,
    nbgallery,
    todo

[coverage:run]
omit =
    ci-helpers/*
    */tests/*
    plasmapy/setup_package.py
    plasmapy/version.py

[coverage:report]
exclude_lines =
    coverage: ignore
    ImportError
    ModuleNotFoundError
    if __name__ == "__main__":
